--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -74,75 +74,58 @@
     }
 
     /* New styles for amenities and reviews */
-    article .amenities{
-        width: 100%;
-        margin-top: 40px;
-        padding: 0;
-    }
-    
-    .amenities h2{
-        width: 100%;
-        font-size:16px;
-        border-bottom: 1px solid #DDDDDD;
-        padding-left: 0;
-        text-align: start;
-        padding-bottom: 10px;
-        margin-bottom: 10px;
-    }
-    .amenities li{
-        list-style: none;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    .amenities__list div.tv{
-        width: 30px;
-        height: 30px;
-        margin-right: 10px;
-        background: center/cover no-repeat url("/images/icon_tv.png");
-    }
-    
-    .amenities__list div.wifi{
-        width: 30px;
-        height: 30px;
-        margin-right: 10px;
-        background: center/cover no-repeat url("/images/icon_wifi.png");
-    }
-    
-    .amenities__list div.pets{
-        width: 30px;
-        height: 30px;
-        margin-right: 10px;
-        background: center/cover no-repeat url("/images/icon_pets.png");
-    }
-    
-    /* REVIEWS===================== */
-    .reviews{
-        margin-top: 40px;
-    }
-    
-    .reviews h2{
-        font-size: 16px;
-        border-bottom:1px solid #DDDDDD;
-        text-align: start;
-        margin-bottom: 10px;
-        padding-bottom: 10px;
-    }
-    
-    .reviews__list li{
-        list-style: none;
-        margin-bottom: 10px;
-    }
-    
-    .reviews__list h3{
-        font-size: 14px;
-        margin-bottom: 5px;
-    }
-    .reviews__list p{
-        font-size: 12px;
-    }
-     
+.amenities,
+.reviews {
+    margin-top: 20px;
+    border-top: 1px solid #DDDDDD;
+    padding-top: 20px;
+}
+
+.amenities h2,
+.reviews h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.amenities ul,
+.reviews ul {
+    list-style: none;
+    padding: 0;
+}
+
+.amenities li,
+.reviews li {
+    margin-bottom: 5px;
+}
+
+.reviews h3 {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.reviews p {
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.amenities li {
+    margin-bottom: 5px;
+    background-repeat: no-repeat;
+    padding-left: 20px;
+}
+
+.amenities li.pet-friendly {
+    background-image: url("../images/icon_pets.png");
+}
+
+.amenities li.tv {
+    background-image: url("../images/icon_tv.png");
+}
+
+.amenities li.wifi {
+    background-image: url("../images/icon_wifi.png");
+}
+
     .places h1 {
       font-size: 30px;
       font-weight: bold;
