--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -3,8 +3,8 @@
  */
 
 /* Header style */
-header {
-    background-color: #f00;
-    height: 70px;
-    width: 100%;
-  }
+header{
+  Background-color:#FF0000;
+  height: 70px;
+  width:100%;
+}
