--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,13 +4,13 @@
 
 /* Footer style */
 footer {
-    align-items: center;
-    background-color: white;
-    border-top: 1px solid #CCCCCC;
-    bottom: 0;
-    display: flex;
+	background-color: white;
     height: 60px;
-    justify-content: center;
-    position: absolute;
     width: 100%;
-  }
+    border-top: 1px solid #CCCCCC;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	bottom: 0;
+}
