--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,69 +1,51 @@
-/*
- * --- Filters Class Style ---
- */
-
-/* Filters style */
-.filters {
+.filters{
     background-color: white;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
     height: 70px;
     width: 100%;
-  }
-  
-  /* Search button style */
-  .filters button {
-    background: #FF5A5F;
+    border: solid 1px #DDDDDD;
+    border-radius: 4px;
+    text-align: right;
+}
+
+section.filters button{
+    margin-top: 11px;
+    margin-bottom: 11px;
+    margin-right: 30px;
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: white;
+    height: 48px;
+    width: 20%;
     border: none;
     border-radius: 4px;
-    color: #FFFFFF;
-    float: right;
-    font-size: 18px;
-    height: 48px;
-    margin: 12px 30px;
-    width: 20%;
-  }
-  
-  /* Search button hover opacity */
-  .filters button:hover {
-    background-color: rgba(255, 90, 95, .9);
-  }
-  
-  /* Locations and amenities style */
-  .locations,
-  .amenities {
-    display: inline-block;
+}
+section.filters button:hover {
+    opacity: 0.9;
+}
+.locations{
+    text-align: left;
     height: 100%;
     width: 25%;
-  }
-  
-  /* Locations border */
-  .locations {
-    border-right: 1px solid #DDDDDD;
-  }
-  
-  /*
-   * --- Places header style ---
-   */
-  
-  /* Header 3 style */
-  .locations h3,
-  .amenities h3 {
-      font-weight: 600;
-      font-size: 16px;
-      margin-top: 20px;
-      margin-bottom: 0px;
-      text-align: left;
-      margin-left: 30px;
-  }
-  
-  /* Header 4 style */
-  .locations h4,
-  .amenities h4 {
-      font-weight: 400;
-      font-size: 14px;
-      margin-top: 0px;
-      margin-bottom: 0px;
-      text-align: left;
-      margin-left: 30px;
-  }
+    border-right: solid 1px #DDDDDD;
+    margin-left: 30px;
+    float: left;
+}
+.amenities{
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    margin-left: 30px;
+    float: left;
+}
+h3{
+    font-weight: 600;
+    margin: 0px;
+    margin-top: 17px;
+    padding: 0px;
+}
+h4{
+    margin: 0px;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 14px;
+}
