--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,81 +1,139 @@
-/* Places flexbox */
-.places {
+.places{
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: column;
+    padding-left: 30px;
+}
+.places h1{
+    font-size: 30px;
+}
+.places_title{
+    padding-top: 30px;
+    margin-bottom: -25px;
+}
+.articles{
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+}
+article{
+    width: 390px;
+    margin: 20px;
+    padding: 20px;
+    border: solid #FF5A5F 1px;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-bottom: 30px;
+    position: relative;
+}
+article h2{
+    font-size: 30px;
+    margin-top: -1px;
+    padding-left: 0%;
+}
+.article_title{
     width: 100%;
-  }
-  
-  /* boxed list structure of places */
-  .places {
-      text-align: center;
-    }
-    .places h1 {
-      font-size: 30px;
-      text-align: left;
-    }
-    article {
-      width: 390px;
-      border: 1px solid #FF5A5F;
-      border-radius: 4px;
-      padding: 20px;
-      margin: 20px;
-      display: inline-block;
-      min-height: 250px;
-      vertical-align: top;
-    }
-    article h2 {
-      font-size: 30px;
-      margin-top: 5px;
-    }
-    /* structure within boxed lists of places */
-    div.price_by_night {
+}
+.price_by_night{
     color: #FF5A5F;
-      border: 4px solid #FF5A5F;
-      border-radius: 100%;
-      min-width: 60px;
-      height: 60px;
-      line-height: 60px;
-      font-size: 30px;
-      position: relative;
-      float: right;
-      top: -80px; 
-    }
-    div.information {
-      height: 80px;
-      border-top: 1px solid #DDDDDD;
-      border-bottom: 1px solid #DDDDDD;
-    }
-    div.max_guest,
-    div.number_rooms,
-    div.number_bathrooms {
-      line-height: 140px;
-      width: 100px;
-      height: 100%;
-      display: inline-block;
-      background-position: 50% 5px;
-      background-repeat: no-repeat;
-    }
-    .max_guest {
-      background-image: url("../images/icon_group.png");
-    }
-    .number_rooms {
-      background-image: url("../images/icon_bed.png");
-    }
-    .number_bathrooms {
-      background-image: url("../images/icon_bath.png");
-    }
-    div.user,
-    div.description {
-      text-align: left;
-      margin-bottom: 10px;
-      margin-top: 10px;
-    }
-  
-    .places h1 {
-      font-size: 30px;
-      font-weight: bold;
-      margin: .67em 0 .67em 0;
-      width: 100%;
-    }
-    
+    border: 4px solid #FF5A5F;
+    min-width: 60px;
+    height: 60px;
+    font-size: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    margin-top: -5px;
+}
+.price{
+    margin-top: -1px;
+}
+.price_title{
+    display: flex;
+}
+.information{
+    height:80px;
+    border-top: solid #DDDDDD 1px;
+    border-bottom: solid #DDDDDD 1px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.max_guest{
+    width: 100px;
+    display: flex;
+    height: inherit;
+    flex-direction: column;
+    justify-content: center;
+}
+.guest_icon{
+    height: inherit;
+    width: inherit;
+    background: url("../images/icon_group.png");
+    background-repeat: no-repeat;
+    margin-left: 35px;
+}
+.guest_number h2{
+    font-size: 14px;
+    color:  #484848;
+    font-weight: normal;
+}
+
+.number_rooms{
+    width: 100px;
+    display: flex;
+    height: inherit;
+    flex-direction: column;
+    justify-content: center;
+}
+.rooms_icon{
+    height: inherit;
+    width: inherit;
+    background: url("../images/icon_bed.png");
+    background-repeat: no-repeat;
+    margin-left: 35px;
+}
+.rooms_number h2{
+    font-size: 14px;
+    color:  #484848;
+    font-weight: normal;
+}
+
+.number_bathrooms{
+    width: 100px;
+    display: flex;
+    height: inherit;
+    flex-direction: column;
+    justify-content: center;
+}
+.bathrooms_icon{
+    height: inherit;
+    width: inherit;
+    background: url("../images/icon_bath.png");
+    background-repeat: no-repeat;
+    margin-left: 35px;
+}
+.bathrooms_number h2{
+    font-size: 14px;
+    color:  #484848;
+    font-weight: normal;}
+.user{
+    font-size: 14px;
+    color: #484848;
+    text-align: left;
+    margin-top: 15px;
+}
+.description{
+    font-size: 14px;
+    text-align: left;
+    margin-top: 7px;
+    margin-bottom: 0px;
+}
